# Math-Core

./: CMakeLists.txt  CMakePresets.json
.github/workflows/: ci.yml
algorithms/: CMakeLists.txt  algorithms.map
algorithms/include/algorithms/: reduce.h  sort.h
algorithms/src/: reduce.cpp  sort.cpp
analytics/: CMakeLists.txt  analytics.map
analytics/include/analytics/: stats.h
analytics/src/: aggregate.cpp  stats.cpp
cmake/: ABICheck.cmake  ValidateCompiler.cmake  VersionInfo.cmake
core/: CMakeLists.txt  core.map
core/include/core/: memory.h  types.h
core/src/: memory.cpp  types.cpp
examples/: CMakeLists.txt  basic_usage.cpp
tests/: CMakeLists.txt
tests/algorithms/: test_reduce.cpp  test_sort.cpp
tests/analytics/: test_stats.cpp
tests/core/: test_abi.cpp  test_matrix.cpp
